Fri Oct 18 13:47:01 1996  Barry Jaspan  <bjaspan@mit.edu>

	* getdate.y: remove military timezones and plain integeres as part
 	of date specifications, to reduce confusion by redundancy
 	[krb5-admin/15]

Wed Oct  9 15:23:51 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c (kadmin_addprinc): add "default" policy behavior;
 	delete kadmin_renprinc entirely, since it is no longer supported
 	by the api and there is no ss command for it anyway

	* kadmin.M: document "default" policy behavior.  [krb5-admin/84]

Fri Oct  4 16:37:30 1996  Kevin L Mitchell  <klmitch@mit.edu>

	* kadmin.c (kadmin_renprinc): Changed newcanon to oldcanon in the
		"make sure blah is removed from acls before reusing"
		message

Wed Sep 25 16:22:12 1996  Barry Jaspan  <bjaspan@mit.edu>

	* getdate.y: add lots of comments

Tue Sep 10 00:48:38 1996  Mark Eichin  <eichin@cygnus.com>

	* kadmin.c (kadmin_startup): -m doesn't take an argument.

Tue Sep 10 14:15:28 1996  Tom Yu  <tlyu@mit.edu>

	* kadmin.M: remove ".so man1/header.doc"

Mon Sep  9 11:14:23 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* kadmin.c: Fix the usage messages to state -randkey, not
 		-randpass, to conform with what the code (and man pages)
 		use.

Thu Sep  5 20:15:12 1996  Ezra Peisach  (epeisach@mit.edu)
 
  	* getdate.y: Declare a private copy of struct timeb (no-one uses
		the extra return structure in our tree). This works around
		a bug with Sun's cc cimpiler, and pragma incompatibility
		in its header files.

Tue Sep  3 22:10:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (install): Fixed typo: ($PROG) -> $(PROG)

Thu Aug 29 16:08:10 1996  Jeff Bigler  <jcb@mit.edu>

	* Makefile.in (install): added man pages for kadmin and
	kadmin.local

Fri Aug 23 14:16:18 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Use shared libaries if present.

Fri Aug 23 14:47:55 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c: add newlines to "invalid date spec" msg
